--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "astro": "^5.14.3",
     "jszip": "^3.10.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-draggable": "^4.5.0",
+    "react-moveable": "^0.56.0"
   }
 }
