--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "astro": "^5.14.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "jszip": "^3.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-draggable": "^4.5.0",
-    "react-moveable": "^0.56.0"
+    "react-moveable": "^0.56.0",
+    "react-to-print": "^3.2.0"
+  },
+  "devDependencies": {
+    "baseline-browser-mapping": "^2.9.13"
   }
 }
